--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-23  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/gui/clock/Form1.cpp (class Form1): dayofweekが0ではなく7で返ってきていて配列をオーバーしていたバグを修正
+
 2004-05-23  tino  <tino@users.sourceforge.jp>
 
         * src/kernel/Process.h (Scheduler::wakeupEvents): Scheduler::wakeupTimer()から名称変更
