--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-27  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/gui/cube/cube.cpp: nikqさんよりcubeをご提供いただきました。
+
 2004-05-26  tino  <tino@users.sourceforge.jp>
 
         * src/servers/gui/main.cpp: クライアントの登録・管理
