remove cmessage and clist
Modified Files:
	ChangeLog apps/gui/shell/Form1.cpp include/monapi/Message.h
	include/monapi/messages.h
	src/lib/gui/System/Drawing/Bitmap.cpp
	src/lib/gui/System/Mona/Forms/Application.cpp
	src/lib/gui/System/Mona/Forms/Control.cpp
	src/lib/gui/System/Mona/Forms/Form.cpp
	src/lib/gui/System/Mona/Forms/Timer.cpp
	src/lib/monapi/Makefile src/lib/monapi/Message.cpp
	src/lib/monapi/System.cpp src/lib/monapi/syscall.cpp
	src/servers/elf/ProcessManager.cpp src/servers/elf/main.cpp
	src/servers/file/main.cpp src/servers/gui/image.cpp
	src/servers/gui/main.cpp src/servers/gui/screen.cpp
	src/servers/key/main.cpp src/servers/mouse/main.cpp
	src/servers/shell/InternalCommands.cpp
	src/servers/shell/Shell.cpp src/servers/shell/main.cpp
Added Files:
	src/lib/monapi/cmemoryinfo.cpp src/lib/monapi/messages.cpp
Removed Files:
	include/monapi/clist.h include/monapi/cmessage.h
	src/lib/monapi/clist.c src/lib/monapi/cmemoryinfo.c
	src/lib/monapi/cmessage.c src/lib/monapi/messages.c

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,19 @@
+2004-05-29  tino  <tino@users.sourceforge.jp>
+
+        * include/monapi/Message.h (sendReceive, reply, equals*): 追加 (thanks ひげぽんさん)
+
+        * src/lib/monapi/Message.cpp (sendReceive, reply): 追加 (thanks ひげぽんさん)
+
+        * include/monapi/clist.h, cmessage.h: 削除
+
+        * src/lib/monapi/clist.c, cmessage.c: 削除
+
+        * src/lib/monapi/messages.cpp: Cで処理し切れないのでmessages.cを一部C++化
+                                       ※extern "C"のままなので、依然Cからのアクセスは可能
+
+        * src/lib/monapi/cmemoryinfo.cpp: Cで処理し切れないのでcmemoryinfo.cを一部C++化
+                                          ※extern "C"のままなので、依然Cからのアクセスは可能
+
 2004-05-27  higepon  <higepon@users.sourceforge.jp>
 
         * src/lib/monalibc/math.cpp (atan): atan2()追加
