--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-30  tino  <tino@users.sourceforge.jp>
+
+        * src/servers/gui: Zオーダー管理、透過ウインドウ対応
+
+        * src/lib/gui: GUI.SVRの新機能に対応
+
 2004-05-29  tino  <tino@users.sourceforge.jp>
 
         * src/lib/monapi/syscall.cpp (putInt): 0を表示
