--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-31  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/gui/anaclock/Form1.cpp (class Form1): 駄目人間さん提供のAnaClock追加
+
 2004-05-30  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/mouse/main.cpp (MessageLoop): マウスの物理的マウス移動量に応じて移動量を変える。
