--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-06  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/gui/waba/ : Waba for Mona 0.1.7‚ÉXV (thanks bayside‚³‚ñ)
+
 2004-06-06  tino  <tino@users.sourceforge.jp>
 
         * apps/gui/waba/nmport_b.c (processEvent): executeMethod()‚Å—‚¿‚é–â‘è‚ğC³ (thanks •¢–Ê‚³‚ñ)
