--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-07  higepon  <higepon@users.sourceforge.jp>
+
+        * include/monalibc/math.h: acos’Ç‰Á
+
 2004-06-06  higepon  <higepon@users.sourceforge.jp>
 
         * apps/gui/waba/ : Waba for Mona 0.1.7‚ÉXV (thanks bayside‚³‚ñ)
