Waba for Mona 0.1.8

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-08  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/gui/waba Waba for Mona 0.1.8‚ÉXV (thanks bayside‚³‚ñ)
+
 2004-06-07  higepon  <higepon@users.sourceforge.jp>
 
         * include/monalibc/math.h: acos’Ç‰Á
