--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,7 @@
 2004-06-08  higepon  <higepon@users.sourceforge.jp>
 
+        * apps/non-gui/monamona/: monamona’Ç‰Á(thanks shadow‚³‚ñ)
+
         * apps/gui/waba Waba for Mona 0.1.8‚ÉXV (thanks bayside‚³‚ñ)
 
 2004-06-07  higepon  <higepon@users.sourceforge.jp>
