--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-08  tino  <tino@users.sourceforge.jp>
+
+        * include/gui/System/Mona/Forms/Cursor.h: ’Ç‰Á
+
+        * src/lib/gui/System/Mona/Forms/Cursor.cpp: ’Ç‰Á
+
 2004-06-09  higepon  <higepon@users.sourceforge.jp>
 
         * tools/elf_tool/elfparser.cpp (ParseExecutable): ‚¢‚ë‚¢‚ëŽè’¼‚µ
