--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-10  tino  <tino@users.sourceforge.jp>
+
+        * include/gui/System/Drawing/Bitmap.h (GetPixel): 範囲チェック
+
+        * apps/gui/kukuri: マスコットアプリを追加
+
 2004-06-09  higepon  <higepon@users.sourceforge.jp>
 
         * tools/elf_tool/elfparser.cpp (Relocate): 再配置のパースを追加
