add Mr. Yamami's pciinfo
Modified Files:
	ChangeLog apps/non-gui/Makefile
Added Files:
	apps/non-gui/pciinfo/.cvsignore apps/non-gui/pciinfo/Makefile
	apps/non-gui/pciinfo/PCIINF.TXT
	apps/non-gui/pciinfo/pciinfo.cpp
	apps/non-gui/pciinfo/pciinfo.h

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-12  tino  <tino@users.sourceforge.jp>
+
+        * apps/non-gui/pciinfo: 追加 (thanks Yamamiさん)
+
 2004-06-10  tino  <tino@users.sourceforge.jp>
 
         * include/gui/System/Drawing/Bitmap.h (GetPixel): 範囲チェック
