Modified Files: 	ChangeLog apps/gui/2chAA/Makefile apps/gui/anaclock/Makefile 	apps/gui/clock/Makefile apps/gui/cube/Makefile 	apps/gui/fire/Makefile apps/gui/kukuri/Makefile 	apps/gui/launcher/Makefile apps/gui/mtorz/Makefile 	apps/gui/noiz2bg/Makefile apps/gui/ps/Makefile 	apps/gui/reversi/Makefile apps/gui/shell/Makefile 	apps/gui/waba/Makefile apps/non-gui/jpegdemo/Makefile 	env/monapi-el2.inc env/monapi-elf.inc env/monapi.inc 	include/gui/messages.h samples/gui/bitmap/Makefile 	samples/gui/button/Makefile samples/gui/label/Makefile 	src/lib/monapi/Makefile src/lib/monapi/monapi.cpp 	src/servers/elf/Makefile src/servers/file/Makefile 	src/servers/gui/Makefile src/servers/gui/effect.cpp 	src/servers/gui/window.cpp Added Files: 	src/lib/monapi/monapi_impl.cpp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,17 @@
+2004-06-13  tino  <tino@users.sourceforge.jp>
+
+        * src/servers/shell/Makefile: FreeBSD対応
+
+        * apps/gui/mtorz/Form1.cpp: Timerを使用
+
+        * src/lib/monapi/monapi.cpp: エントリポイントを独立
+
+        * src/lib/monapi/monapi_impl.cpp: エントリポイントの実装
+
+        * env/monapi-elf.inc: エントリポイントがバイナリの最初に来るように修正
+
+        * env/monapi-el2.inc: エントリポイントがバイナリの最初に来るように修正
+
 2004-06-12  higepon  <higepon@users.sourceforge.jp>
 
         * apps/gui/mtorz/: 追加 (thanks あっきいさん)
