Modified Files: 	ChangeLog apps/gui/Makefile apps/gui/launcher/Form1.cpp 	apps/gui/shell/Form1.cpp bin/root/MONAGUI.INI 	include/gui/messages.h include/gui/System/Drawing/Point.h 	include/monapi/messages.h 	src/lib/gui/System/Mona/Forms/Form.cpp 	src/lib/monapi/messages.cpp src/lib/monapi/syscall.cpp 	src/servers/elf/main.cpp src/servers/file/file.cpp 	src/servers/file/file.h src/servers/file/main.cpp 	src/servers/gui/effect.cpp src/servers/gui/effect.h 	src/servers/gui/main.cpp src/servers/gui/window.cpp 	src/servers/shell/Shell.cpp Added Files: 	apps/gui/monafile/.cvsignore apps/gui/monafile/FileBrowser.cpp 	apps/gui/monafile/FileBrowser.h 	apps/gui/monafile/FileManager.cpp 	apps/gui/monafile/FileWindow.cpp 	apps/gui/monafile/FileWindow.h apps/gui/monafile/Icon.cpp 	apps/gui/monafile/Icon.h apps/gui/monafile/Makefile 	apps/gui/monafile/icons.bmp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,12 @@
+2004-06-14  tino  <tino@users.sourceforge.jp>
+
+        * include/monapi/messages.h: MSG_FILE_READ_DIRECTORY, monapi_directoryinfo,
+                                     monapi_call_file_read_directory追加
+
+        * src/servers/file/file.cpp (ReadDirectory): 追加
+
+        * include/gui/System/Drawing/Point.h (operator !=): 追加
+
 2004-06-14  higepon  <higepon@users.sourceforge.jp>
 
         * tools/elf_tool/ : テスト用再配置可能ELFの作成など
