Modified Files: 	ChangeLog apps/gui/launcher/Form1.cpp 	apps/gui/monafile/FileBrowser.cpp 	apps/gui/monafile/FileBrowser.h 	apps/gui/monafile/FileManager.cpp 	apps/gui/monafile/FileWindow.cpp apps/gui/monafile/Icon.cpp 	apps/gui/monafile/Icon.h apps/gui/shell/Form1.cpp 	bin/root/MONAGUI.INI include/gui/messages.h 	src/servers/gui/effect.cpp src/servers/gui/effect.h 	src/servers/gui/window.cpp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-15  tino  <tino@users.sourceforge.jp>
+
+        * apps/gui/monafile: ファイルブラウザ追加
+
+        * bin/root/MONAGUI.INI: RunからLAUNCHER.EL2を外してMONAFILE.APPを追加
+
 2004-06-14  tino  <tino@users.sourceforge.jp>
 
         * include/monapi/messages.h: MSG_FILE_READ_DIRECTORY, monapi_directoryinfo,
