separate process server from elf server
Modified Files:
	ChangeLog apps/gui/Makefile apps/gui/launcher/Form1.cpp
	apps/gui/monafile/FileManager.cpp bin/root/MONA.CFG
	include/monapi/messages.h src/lib/monapi/messages.cpp
	src/lib/monapi/syscall.cpp src/servers/Makefile
	src/servers/1linesh/Command.cpp
	src/servers/1linesh/OneLineShell.cpp src/servers/elf/Makefile
	src/servers/elf/main.cpp src/servers/gui/main.cpp
	src/servers/shell/InternalCommands.cpp
	src/servers/shell/Shell.cpp
Added Files:
	src/servers/pe/.cvsignore src/servers/pe/Makefile
	src/servers/pe/PEServer.h src/servers/pe/main.cpp
	src/servers/process/.cvsignore src/servers/process/Makefile
	src/servers/process/ProcessInfo.cpp
	src/servers/process/ProcessInfo.h
	src/servers/process/ProcessManager.cpp
	src/servers/process/ProcessManager.h
	src/servers/process/ProcessServer.h
	src/servers/process/main.cpp
Removed Files:
	src/servers/elf/ProcessInfo.cpp src/servers/elf/ProcessInfo.h
	src/servers/elf/ProcessManager.cpp
	src/servers/elf/ProcessManager.h

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -6,6 +6,14 @@
 
         * src/lib/monapi/monapi.cpp (user_start): extern "C"によりリンク時の警告に対処
 
+        * src/servers/elf: ELFをバイナリイメージに展開する部分以外はPROCESSサーバーに分離
+
+        * src/servers/process: ELFサーバーから分離した部分を独立
+
+        * src/servers/Makefile: 容量節約のためmonitorサーバーを外した
+
+        * apps/gui/Makefile: 容量節約のためlauncherを外した
+
 2004-06-29  higepon  <higepon@users.sourceforge.jp>
 
         * apps/non-gui/ata/main.cpp (IDE_Identifye): identifyコマンド送信(挙動がおかしい)
