--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-30  tino  <tino@users.sourceforge.jp>
+
+        * src/servers/pe: リンクされているDLLを検出
+
 2004-06-30  higepon  <higepon@users.sourceforge.jp>
 
         * apps/non-gui/ata/main.cpp : セクタリード成功
