--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-01  higepon  <higepon@users.sourceforge.jp>
+
+        * include/sys/HashMap.h: hash値がゼロになってしまうバグを修正(thanks Yamamiさん)
+
 2004-06-30  tino  <tino@users.sourceforge.jp>
 
         * src/servers/pe: リンクされているDLLを検出
