--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-02  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/non-gui/ata/main.cpp (IDEDriver): IDEDriverクラスを追加。IStorageDeviceを継承(未完成)
+
 2004-07-01  higepon  <higepon@users.sourceforge.jp>
 
         * include/sys/HashMap.h: hash値がゼロになってしまうバグを修正(thanks Yamamiさん)
