for DLL (not default)
Modified Files:
	ChangeLog bin/Makefile bin/root/.cvsignore
	include/monapi/syscall.h src/lib/gui/.cvsignore
	src/lib/gui/Makefile
	src/lib/gui/System/Mona/Forms/Application.cpp
	src/lib/gui/System/Mona/Forms/Control.cpp
	src/lib/monapi/.cvsignore src/lib/monapi/Makefile
	src/lib/monapi/monapi.cpp src/lib/monapi/monapi_impl.cpp
Added Files:
	src/lib/gui/stub.cpp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,15 @@
+2004-07-05  tino  <tino@users.sourceforge.jp>
+
+        * src/lib/monapi/Makefile: BUILD_TARGET=PE-DLLの場合にMONAPI.DLLを生成
+
+        * src/lib/gui/Makefile: BUILD_TARGET=PE-DLLの場合にGUI.DLLを生成
+
+        * include/monapi/syscall.h (invokeFuncList, setContrsuctorList, isInDLL): 追加
+
+        * src/lib/gui/System/Mona/Forms/Application.cpp: DLL使用時にinvokeFuncList()を使用
+
+        * src/lib/gui/System/Mona/Forms/Control.cpp: DLL対策で関数内staticオブジェクトを関数外に出した
+
 2004-07-04  higepon  <higepon@users.sourceforge.jp>
 
         * apps/non-gui/ata/main.cpp (MonaMain): IDEドライバ(読み込み専用)がなんとなく完成。IDEドライバの使用方法まとめ。
