--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-09  tino  <tino@users.sourceforge.jp>
+
+        * src/lib/monapi/string.cpp (memmove): バグ修正
+
 2004-07-09  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/Process.cpp (sendKilledMessage): KILL時にメッセージを送るように変更したら動かなくなった。
