--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,4 +1,12 @@
+2004-08-25  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/Scheduler.cpp (Schedule2): 実機で動かないバグを修正FPU例外が上がっていたと推測される。
+
 2004-08-24  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/Process.cpp : スケジューラ論理バグ修正
+                                   idleスレッドを特別扱いしqueueに2重登録されていた→idleスレッドを優先度を最低とする事で解決。
+                                   WaitEvent後に、EventキューからRunキューに誤まったタイミングで移動するバグを修正
 
         * src/kernel/Scheduler.h : Win32上でテスト済みの優先順位つきスケジューラを組み込んだ。マトモに動かないがcommit
 
